Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,8 @@ stages:
             cliProjectKey: 'BhabyaBharti_JavaLoginPracticeApp'
             cliProjectName: 'JavaLoginPracticeApp'
             cliSources: '.'
+            extraProperties: |
+              sonar.organization=bhabyabharti
 
         
 
