--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,7 +29,7 @@ stages:
             cliSources: '.'
             extraProperties: |
               sonar.organization=bhabyabharti
-              sonar.sources=src/main/java,src/main/webapp
+              sonar.sources=src/main/webapp
               sonar.java.binaries=target/classes
               sonar.java.libraries=target/**/*.jar
               sonar.tests=
@@ -53,10 +53,11 @@ stages:
             effectivePomSkip: false
 
         - task: Maven@4
+          displayName: Run SonarQube Analysis
           inputs:
             mavenPomFile: 'pom.xml'
             goals: 'sonar:sonar'
-            options: '-Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$(SONAR_TOKEN)" -Dsonar.tests= -Dsonar.test.exclusions=**/*'''
+            options: '-Dsonar.host.url=https://sonarcloud.io -Dsonar.login="6d738a0fb7e64392588deda6688aefc897c22844"'
             #publishJUnitResults: true
             #testResultsFiles: '**/surefire-reports/TEST-*.xml'
             javaHomeOption: 'JDKVersion'
