--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,12 +29,9 @@ stages:
             cliSources: '.'
             extraProperties: |
               sonar.organization=bhabyabharti
-              sonar.ci.autoconfig.disabled=true
-              # Skip test analysis
+              sonar.host.url='https://sonarcloud.io'
               sonar.tests=
               sonar.test.exclusions=**/*
-              # Use CI mode
-              sonar.scm.provider=git
 
         
 
@@ -43,7 +40,7 @@ stages:
           inputs:
             mavenPomFile: 'pom.xml'
             goals: 'clean verify sonar:sonar'
-            options: '-Dsonar.host.url=https://sonarcloud.io -Dsonar.login="$(SONAR_TOKEN)" -Dsonar.organization=bhabyabharti -Dsonar.projectKey=BhabyaBharti_JavaLoginPracticeApp'
+            options: '-Dsonar.host.url=https://sonarcloud.io -Dsonar.login="6d738a0fb7e64392588deda6688aefc897c22844" -Dsonar.organization=bhabyabharti -Dsonar.projectKey=BhabyaBharti_JavaLoginPracticeApp'
             
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '1.17'
