--- a/azure-multi-stage-pipeline-prod.yml
+++ b/azure-multi-stage-pipeline-prod.yml
@@ -28,15 +28,12 @@ stages:
               sonar.tests=
               sonar.test.exclusions=**/*
 
-        
-
         - task: Maven@4
           displayName: mvn build & Run Sonar Analysis
           inputs:
             mavenPomFile: 'pom.xml'
             goals: 'clean verify sonar:sonar'
             options: '-Dsonar.host.url=https://sonarcloud.io -Dsonar.login="6d738a0fb7e64392588deda6688aefc897c22844" -Dsonar.organization=bhabyabharti -Dsonar.projectKey=BhabyaBharti_JavaLoginPracticeApp'
-            
             javaHomeOption: 'JDKVersion'
             jdkVersionOption: '1.17'
             mavenVersionOption: 'Default'
@@ -60,17 +57,12 @@ stages:
             ArtifactName: 'MavenBuildArtifact'
             publishLocation: 'Container'
 
-
-
   - stage: Linting
     displayName: Lint Java App
     dependsOn: Build
-
     jobs:
-
       - job: Linting_Java_App
         steps:
-
         - task: PowerShell@2
           displayName: Install and Run StyleLint
           inputs:
@@ -98,19 +90,18 @@ stages:
               # Force task to succeed even if errors are present
               $LASTEXITCODE = 0
 
-
-
   - stage: Deploy
     displayName: Deploy
     dependsOn: Build
     condition: succeeded()
+    variables:
+      - name: WAR_FILE_NAME
+        value: 'app.war'  # Change this to your actual WAR file name
 
     jobs:
       - deployment: DeployToProd
         displayName: Deploy on Tomcat
-        
         environment: Production
-
         strategy:
           runOnce:
             deploy:
@@ -154,37 +145,75 @@ stages:
                         Write-Host "Found JAR files instead:"
                         $jarFiles | ForEach-Object { Write-Host "  - $($_.FullName)" }
                       }
+                      exit 1
                     } else {
                       Write-Host "Found $($warFiles.Count) WAR file(s):"
                       $warFiles | ForEach-Object { 
                         Write-Host "  - $($_.FullName)"
+                        # Set variable for WAR file name
+                        Write-Host "##vso[task.setvariable variable=WAR_FILE_NAME]$($_.Name)"
+                        Write-Host "##vso[task.setvariable variable=WAR_FULL_PATH]$($_.FullName)"
                       }
                     }
-                
+
               - task: CopyFilesOverSSH@0
-                displayName: Copy Files Over SSH
+                displayName: Copy WAR to Temp Location
                 inputs:
                   sshEndpoint: 'ssh_to_vm_sc'
                   sourceFolder: '$(Pipeline.Workspace)/MavenBuildArtifact'
                   contents: '**/*.war'
-                  targetFolder: '/opt/tomcat/webapps/'
+                  targetFolder: '~/tmp_deploy/'
                   readyTimeout: '20000'
+                  
               - task: SSH@0
-                displayName: Restart Tomcat
+                displayName: Deploy WAR to Tomcat with Proper Permissions
                 inputs:
                   sshEndpoint: 'ssh_to_vm_sc'
                   runOptions: 'inline'
                   inline: |
-                      # Move WAR file from temp to webapps using sudo
-                      if [ -f "~/tmp_deploy/$(WAR_FILE_NAME)" ]; then
-                        sudo cp "~/tmp_deploy/$(WAR_FILE_NAME)" /opt/tomcat/webapps/
-                        sudo chown tomcat:tomcat "/opt/tomcat/webapps/$(WAR_FILE_NAME)"
-                        echo "WAR file deployed successfully"
-                        
-                        # Clean up temp file
-                        rm -f "~/tmp_deploy/$(WAR_FILE_NAME)"
-                      else
-                        echo "ERROR: WAR file not found in temp location"
-                        exit 1
-                      fi
+                    # Ensure webapps directory exists with correct permissions
+                    sudo mkdir -p /opt/tomcat/webapps
+                    sudo chown -R tomcat:tomcat /opt/tomcat/webapps
+                    sudo chmod 755 /opt/tomcat/webapps
+                    
+                    # Find and move WAR files from temp location
+                    echo "Looking for WAR files in ~/tmp_deploy/"
+                    if [ -d ~/tmp_deploy ]; then
+                      for war_file in ~/tmp_deploy/*.war; do
+                        if [ -f "$war_file" ]; then
+                          war_name=$(basename "$war_file")
+                          echo "Deploying $war_name to Tomcat..."
+                          
+                          # Stop Tomcat if it's running (optional)
+                          # sudo systemctl stop tomcat
+                          
+                          # Remove old deployment if exists
+                          sudo rm -rf "/opt/tomcat/webapps/${war_name%.*}"
+                          sudo rm -f "/opt/tomcat/webapps/$war_name"
+                          
+                          # Copy WAR with tomcat ownership
+                          sudo cp "$war_file" /opt/tomcat/webapps/
+                          sudo chown tomcat:tomcat "/opt/tomcat/webapps/$war_name"
+                          sudo chmod 644 "/opt/tomcat/webapps/$war_name"
+                          
+                          echo "Successfully deployed $war_name"
+                        fi
+                      done
+                      
+                      # Clean up temp directory
+                      rm -rf ~/tmp_deploy
+                    else
+                      echo "ERROR: Temp directory ~/tmp_deploy not found!"
+                      exit 1
+                    fi
+                    
+                    # Restart Tomcat to deploy new WAR
+                    echo "Restarting Tomcat service..."
+                    sudo systemctl restart tomcat
+                    
+                    # Check Tomcat status
+                    echo "Tomcat status:"
+                    sudo systemctl status tomcat --no-pager
+                    
+                    echo "Deployment completed successfully!"
                   readyTimeout: '20000'
