--- a/azure-multi-stage-pipeline-prod.yml
+++ b/azure-multi-stage-pipeline-prod.yml
@@ -156,62 +156,45 @@ stages:
                     }
 
               - task: SSH@0
-                displayName: Install Tomcat if needed
+                displayName: Install Tomcat from Ubuntu repo
                 inputs:
                   sshEndpoint: 'ssh_to_vm_sc'
                   runOptions: 'inline'
                   inline: |
-                    echo "=== Checking Tomcat Installation ==="
+                    echo "=== Installing Tomcat from Ubuntu Repository ==="
                     
                     # Check if Tomcat is already installed
-                    if [ -f "/opt/tomcat/bin/startup.sh" ]; then
-                      echo "Tomcat is already installed at /opt/tomcat"
+                    if systemctl list-unit-files | grep -q tomcat9; then
+                      echo "Tomcat 9 is already installed via package manager"
                     else
-                      echo "Installing Tomcat 9..."
+                      echo "Installing Tomcat 9 from Ubuntu repository..."
                       
-                      # Install Java if not present
-                      if ! command -v java &> /dev/null; then
-                        echo "Installing Java..."
-                        sudo apt-get update
-                        sudo apt-get install -y openjdk-11-jdk
-                      fi
+                      # Update and install
+                      sudo apt-get update
+                      sudo apt-get install -y tomcat9 tomcat9-admin
                       
-                      # Create tomcat user if not exists
-                      if ! id -u tomcat >/dev/null 2>&1; then
-                        sudo groupadd tomcat
-                        sudo useradd -s /bin/false -g tomcat -d /opt/tomcat tomcat
-                      fi
-                      
-                      # Create directory and download Tomcat
-                      sudo mkdir -p /opt/tomcat
-                      cd /tmp
-                      sudo wget https://archive.apache.org/dist/tomcat/tomcat-9/v9.0.68/bin/apache-tomcat-9.0.68.tar.gz
-                      sudo tar -xzf apache-tomcat-9.0.68.tar.gz -C /opt/tomcat --strip-components=1
-                      
-                      # Set permissions
-                      sudo chown -R tomcat:tomcat /opt/tomcat
-                      sudo chmod +x /opt/tomcat/bin/*.sh
-                      
-                      echo "Tomcat installed successfully!"
+                      echo "Tomcat 9 installed successfully"
                     fi
                     
-                    # Check if Tomcat is running
-                    if ps aux | grep -q "[c]atalina"; then
-                      echo "Tomcat is already running"
-                    else
-                      echo "Starting Tomcat..."
-                      sudo -u tomcat /opt/tomcat/bin/startup.sh
-                      sleep 5
+                    # Check status
+                    echo "=== Tomcat Status ==="
+                    sudo systemctl status tomcat9 --no-pager || echo "Tomcat9 service not found"
+                    
+                    # If not running, start it
+                    if ! systemctl is-active --quiet tomcat9; then
+                      echo "Starting Tomcat 9..."
+                      sudo systemctl start tomcat9
+                      sudo systemctl enable tomcat9
+                      sleep 3
                     fi
                     
-                    # Verify Tomcat is running
-                    echo "=== Verification ==="
-                    if ps aux | grep -q "[c]atalina"; then
-                      echo "✓ Tomcat is running"
-                      echo "Tomcat URL: http://$(curl -s ifconfig.me):8080"
+                    # Verify
+                    if systemctl is-active --quiet tomcat9; then
+                      echo "✓ Tomcat 9 is running"
+                      echo "Webapps directory: /var/lib/tomcat9/webapps"
+                      echo "Access URL: http://$(hostname -I | awk '{print $1}'):8080"
                     else
-                      echo "✗ Tomcat failed to start"
-                      echo "Check logs: /opt/tomcat/logs/catalina.out"
+                      echo "✗ Tomcat 9 failed to start"
                     fi
                   readyTimeout: '20000'
 
@@ -232,29 +215,31 @@ stages:
                   inline: |
                     echo "=== Deploying WAR File ==="
                     
-                    # Ensure webapps directory exists
-                    sudo mkdir -p /opt/tomcat/webapps
-                    sudo chown -R tomcat:tomcat /opt/tomcat/webapps
-                    sudo chmod 755 /opt/tomcat/webapps
+                    # Determine Tomcat webapps directory
+                    if [ -d "/var/lib/tomcat9/webapps" ]; then
+                      WEBAPPS_DIR="/var/lib/tomcat9/webapps"
+                      TOMCAT_SERVICE="tomcat9"
+                      echo "Using Tomcat 9 installation"
+                    elif [ -d "/opt/tomcat/webapps" ]; then
+                      WEBAPPS_DIR="/opt/tomcat/webapps"
+                      TOMCAT_SERVICE=""
+                      echo "Using custom Tomcat installation"
+                    else
+                      echo "ERROR: No Tomcat webapps directory found!"
+                      exit 1
+                    fi
                     
-                    # Check for WAR files in temp location
+                    echo "Webapps directory: $WEBAPPS_DIR"
+                    
+                    # Stop Tomcat before deployment if using systemd service
+                    if [ -n "$TOMCAT_SERVICE" ]; then
+                      echo "Stopping Tomcat service..."
+                      sudo systemctl stop $TOMCAT_SERVICE
+                      sleep 3
+                    fi
+                    
+                    # Deploy WAR files
                     if [ -d ~/tmp_deploy ]; then
-                      WAR_COUNT=$(ls ~/tmp_deploy/*.war 2>/dev/null | wc -l)
-                      if [ $WAR_COUNT -eq 0 ]; then
-                        echo "No WAR files found in ~/tmp_deploy/"
-                        exit 1
-                      fi
-                      
-                      echo "Found $WAR_COUNT WAR file(s)"
-                      
-                      # Stop Tomcat before deployment
-                      echo "Stopping Tomcat for deployment..."
-                      if [ -f "/opt/tomcat/bin/shutdown.sh" ]; then
-                        sudo -u tomcat /opt/tomcat/bin/shutdown.sh
-                        sleep 3
-                      fi
-                      
-                      # Deploy each WAR file
                       for war_file in ~/tmp_deploy/*.war; do
                         if [ -f "$war_file" ]; then
                           war_name=$(basename "$war_file")
@@ -263,13 +248,13 @@ stages:
                           echo "Deploying: $war_name"
                           
                           # Remove old deployment
-                          sudo rm -rf "/opt/tomcat/webapps/$app_name"
-                          sudo rm -f "/opt/tomcat/webapps/$war_name"
+                          sudo rm -rf "$WEBAPPS_DIR/$app_name"
+                          sudo rm -f "$WEBAPPS_DIR/$war_name"
                           
                           # Copy new WAR
-                          sudo cp "$war_file" /opt/tomcat/webapps/
-                          sudo chown tomcat:tomcat "/opt/tomcat/webapps/$war_name"
-                          sudo chmod 644 "/opt/tomcat/webapps/$war_name"
+                          sudo cp "$war_file" "$WEBAPPS_DIR/"
+                          sudo chown tomcat:tomcat "$WEBAPPS_DIR/$war_name" || sudo chown tomcat9:tomcat9 "$WEBAPPS_DIR/$war_name"
+                          sudo chmod 644 "$WEBAPPS_DIR/$war_name"
                           
                           echo "✓ Deployed: $war_name"
                         fi
@@ -279,28 +264,22 @@ stages:
                       rm -rf ~/tmp_deploy
                       
                       # Start Tomcat
-                      echo "Starting Tomcat..."
-                      sudo -u tomcat /opt/tomcat/bin/startup.sh
-                      sleep 8
-                      
-                      # Verify deployment
-                      echo "=== Deployment Verification ==="
-                      echo "Deployed applications:"
-                      ls -la /opt/tomcat/webapps/
-                      
-                      # Check Tomcat status
-                      if ps aux | grep -q "[c]atalina"; then
-                        echo "✓ Tomcat is running successfully"
-                        echo "✓ Application deployed"
-                        echo "Access your app at: http://$(curl -s ifconfig.me):8080/JavaLoginShowcase-1.0.0/"
+                      if [ -n "$TOMCAT_SERVICE" ]; then
+                        echo "Starting Tomcat service..."
+                        sudo systemctl start $TOMCAT_SERVICE
                       else
-                        echo "✗ Tomcat failed to start after deployment"
-                        echo "Check logs: tail -50 /opt/tomcat/logs/catalina.out"
+                        echo "Starting Tomcat..."
+                        sudo -u tomcat /opt/tomcat/bin/startup.sh || echo "Using existing Tomcat process"
                       fi
+                      
+                      sleep 5
+                      
+                      # Verify
+                      echo "=== Deployment Complete ==="
+                      echo "Application deployed to: $WEBAPPS_DIR"
+                      echo "Access at: http://$(hostname -I | awk '{print $1}'):8080/JavaLoginShowcase-1.0.0/"
                     else
-                      echo "ERROR: Temp directory ~/tmp_deploy not found!"
+                      echo "ERROR: No WAR files to deploy"
                       exit 1
                     fi
-                    
-                    echo "=== Deployment Complete ==="
                   readyTimeout: '20000'
