--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -156,6 +156,30 @@ stages:
                   Write-Host "  - $($_.FullName)"
                 }
               }
+        
+        - task: SSH@0
+          displayName: Set Up Tomcat Directory Permissions
+          inputs:
+            sshEndpoint: 'sshSC'
+            runOptions: 'inline'
+            inline: |
+              # Check current permissions
+              ls -la /opt/tomcat/
+              
+              # Create webapps directory if it doesn't exist
+              sudo mkdir -p /opt/tomcat/webapps
+              
+              # Change ownership to tomcat user (or your SSH user)
+              sudo chown -R tomcat:tomcat /opt/tomcat/webapps
+              
+              # OR if your SSH user is different, add them to tomcat group
+              # sudo usermod -a -G tomcat $(whoami)
+              
+              # Set appropriate permissions
+              sudo chmod -R 775 /opt/tomcat/webapps
+              
+              # Verify permissions
+              ls -la /opt/tomcat/webapps
               
         - task: CopyFilesOverSSH@0
           displayName: Copy Files Over SSH
