Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,11 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-trigger:
-  branches:
-    include:
-      - main
-      - feature/Java
+trigger: none
+  # branches:
+  #   include:
+  #     - main
+  #     - feature/Java
 
 pool: Azure Pipelines
 
